# USDA-FoodCentral-ETL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  input_locations.txt.example
include/models/usda/: BrandedFood.h  Food.h  FoodCategory.h  FoodNutrient.h  FoodPortion.h  MeasureUnit.h  Nutrient.h
include/services/: FoodExtractorService.h  FoodPortionExtractorService.h  MeasureUnitExtractorService.h  PipelineManager.h
include/services/extractors/: BrandedFoodExtractorService.h  FoodCategoryExtractorService.h  FoodExtractorService.h  FoodNutrientExtractorService.h  FoodPortionExtractorService.h  MeasureUnitExtractorService.h  NutrientExtractorService.h
include/services/loaders/: SQLiteLoader.h  SQLiteLoaderService.h
include/services/transformers/: ValidFDCIDTransformer.h
src/: main.cpp
src/services/: BrandedFoodExtractorService.cpp  FoodCategoryExtractorService.cpp  FoodExtractorService.cpp  FoodNutrientExtractorService.cpp  FoodPortionExtractorService.cpp  MeasureUnitExtractorService.cpp  NutrientExtractorService.cpp  PipelineManager.cpp
src/services/extractors/: BrandedFoodExtractorService.cpp  FoodCategoryExtractorService.cpp  FoodExtractorService.cpp  FoodNutrientExtractorService.cpp  FoodPortionExtractorService.cpp  MeasureUnitExtractorService.cpp  NutrientExtractorService.cpp
src/services/loaders/: SQLiteLoaderService.cpp
src/services/transformers/: ValidFDCIDTransformer.cpp
